[gd_scene load_steps=19 format=2]

[ext_resource path="res://Objects/T_Door.gd" type="Script" id=1]
[ext_resource path="res://Resources/Miscs/T_Door/T_Door1.png" type="Texture" id=2]
[ext_resource path="res://Resources/Miscs/T_Door/T_Door2.png" type="Texture" id=3]
[ext_resource path="res://Resources/Miscs/T_Door/T_Door3.png" type="Texture" id=4]
[ext_resource path="res://Resources/Miscs/T_Door/T_Door4.png" type="Texture" id=5]
[ext_resource path="res://Resources/Miscs/T_Door/T_DoorOp_change1.png" type="Texture" id=6]
[ext_resource path="res://Resources/Miscs/T_Door/T_DoorOp_change2.png" type="Texture" id=7]
[ext_resource path="res://Resources/Miscs/T_Door/T_DoorOp_change3.png" type="Texture" id=8]
[ext_resource path="res://Resources/Miscs/T_Door/T_DoorOp_change4.png" type="Texture" id=9]
[ext_resource path="res://Resources/Miscs/T_Door/T_DoorCl_change1.png" type="Texture" id=10]
[ext_resource path="res://Resources/Miscs/T_Door/T_DoorCl_change2.png" type="Texture" id=11]
[ext_resource path="res://Resources/Miscs/T_Door/T_DoorCl_change3.png" type="Texture" id=12]
[ext_resource path="res://Resources/Miscs/T_Door/T_DoorCl_change4.png" type="Texture" id=13]
[ext_resource path="res://Resources/Sounds/doorOpen_2.ogg" type="AudioStream" id=14]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": false,
"name": "open",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": false,
"name": "OpenChange",
"speed": 10.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": false,
"name": "ClosedChange",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 20, 18 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 20, 18 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 20, 8 )

[node name="T_Door" type="StaticBody2D" groups=[
"changeable",
]]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "ClosedChange"

[node name="T_CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="P_CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -16 )
shape = SubResource( 3 )
disabled = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 26 )
shape = SubResource( 4 )

[node name="AudioOpenDoor" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 14 )
attenuation = 0.63728
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="finished" from="AudioOpenDoor" to="." method="_on_AudioOpenDoor_finished"]
